wsagentes/overlays/dev/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsagentes
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: wsagentes.lan    # ajusta para o teu domínio/DNS interno
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-web
                port:
                  number: 80
